# pitchfork

./: AGENTS.md  CHANGELOG.md  Cargo.toml  hk.pkl  mise.toml  pitchfork.toml  pitchfork.usage.kdl  settings.toml
.github/workflows/: ci.yml  docs.yml  release-plz.yml  release.yml  zizmor.yml
docs/: package.json
docs/.vitepress/: config.mts
docs/cli/: boot.md  commands.json  index.md  proxy.md  run.md  start.md
docs/cli/boot/: enable.md
docs/cli/config/: add.md
docs/cli/proxy/: untrust.md
docs/guides/: configuration-templates.md  lifecycle-hooks.md  port-management.md  scheduling.md
docs/public/: schema.json
docs/reference/: configuration.md
src/: boot_manager.rs  config_types.rs  daemon.rs  daemon_list.rs  deps.rs  lib.rs  main.rs  pitchfork_toml.rs  procs.rs  state_file.rs  template.rs
src/cli/: boot.rs  list.rs  logs.rs  proxy.rs  restart.rs  run.rs  start.rs  status.rs  wait.rs
src/cli/config/: add.rs
src/cli/supervisor/: mod.rs  start.rs
src/ipc/: batch.rs  client.rs  mod.rs
src/proxy/: hosts.rs  lan_ip.rs  mdns.rs  mod.rs  server.rs  trust.rs
src/supervisor/: hooks.rs  ipc_handlers.rs  lifecycle.rs  mod.rs  pty.rs  retry.rs  state.rs  watchers.rs
src/tui/: ui.rs
src/web/routes/: daemons.rs  logs.rs
test/: hooks.bats  port.bats
tests/: test_e2e_port.rs  test_pitchfork_toml.rs
